# SEC-bench-Pro

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
base/chromium/: Dockerfile
base/linux/: Dockerfile  Dockerfile.latest  build_latest_images.sh  release.config  sanitize-git
base/sm/: Dockerfile  Dockerfile.latest  sanitize-git
base/v8/: Dockerfile  Dockerfile.latest
harness/: GRADING.md  README.md  common.py  eval_claude.py  eval_codex.py  eval_opencode.py  grade.py  judge.py  test_judge.py
harness/router/: __init__.py  ansi.py  fmt_claude.py  fmt_codex.py  fmt_opencode.py  render.py
mcps/: LICENSE  README.md
mcps/linux/: .dockerignore  README.md  pyproject.toml
mcps/linux/src/secb_linux_vm_mcp/: __init__.py  server.py
projects/linux/: README.md  build_images.py  crash_check.sh  patch_check.py  push_images.sh
projects/sm/: Dockerfile.base  README.md  build_fixed_images.sh  build_images.sh  check_bounties.py  common.py  parallel_verify.sh  patch_check.py  push_images.sh
projects/v8/: README.md  build_fixed_images.sh  check_bounties.py  crash_check.sh  patch_check.py
prompts/baseline/: AGENTS_linux.j2  AGENTS_sm.j2  AGENTS_v8.j2  task_prompt_linux.j2  task_prompt_sm.j2  task_prompt_v8.j2
prompts/judge/: edge_classification.j2  linux.j2  sm.j2  v8.j2
sm/: README.md  common.py  crash_check.sh  grade.py  parallel_verify.sh  patch_check.py  push_images.sh
sm/1791520/: Dockerfile  Dockerfile.fixed  meta.json  output.txt
v8/: README.md  build_images.sh  common.py  crash_check.sh  grade.py  patch_check.py  push_images.sh
(+3453 files in other folders)
